Second Update deployed via GitHub Actions

--- a/views/main.pug
+++ b/views/main.pug
@@ -6,6 +6,7 @@ block header
         h2 Cooked By Leon
         h2 Cooked with CLI
         h2 Cooked for github
+        h2 A push is cooked
     
 block content
     div#login
